SERVER-50029 Initialize 'keysInserted' and 'keysDeleted' in the index catalog